--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrency": "^0.1.4",
+    "concurrently": "^7.5.0",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0"
