--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "concurrently": "^7.5.0",
     "express": "^4.18.2",
     "knex": "^2.3.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
