--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./server/index.js",
     "dev": "nodemon server/index.js",
-    "concurrent": "concurrently \"npm run dev\" \"cd client && npm start\"",
+    "concurrent": "concurrently \"npm run dev\" \"cd client && npm run start\"",
     "build": "npm install && cd client && npm install && npm run build",
     "make:migration": "knex migrate:make",
     "migrate": "knex migrate:latest",
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "concurrency": "^0.1.4",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
