--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
+    "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "typescript": "^4.8.4"
   },
