--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./server/index.js",
     "dev": "nodemon server/index.js",
     "concurrent": "concurrently \"npm run dev\" \"cd client && npm run start\"",
-    "build": "npm install && npm run migrate",
+    "build": "npm install && npm run migrate && npm run seed && cd client && npm install && npm run build",
     "make:migration": "knex migrate:make",
     "migrate": "knex migrate:latest",
     "make:seed": "knex seed:make",
